# RedAudit

./: .cursorrules  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_ES.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  Dockerfile  GITHUB_RELEASE.md  IMPROVEMENTS.md  IMPROVEMENTS_ES.md  Manual de instalación de RedAudit.md  PROPOSALS.md  PROPOSALS_ES.md  README.md  README_ES.md  RELEASE_NOTES_v2.5.md  RELEASE_NOTES_v3.0.1.md  RELEASE_NOTES_v3.0.2.md  RELEASE_NOTES_v3.0.3.md  RELEASE_NOTES_v3.1.md  ROADMAP.md  SECURITY_AUDIT.md  SECURITY_AUDIT_ES.md  pyproject.toml  pytest.ini  redaudit.py  redaudit_decrypt.py  redaudit_install.sh  redaudit_verify.sh  release_payload.md  roadmap_execution.md
.agent/rules/: redaudit.md  workflow.md
.agent/workflows/: pre-push.md  release.md
.github/: CONTRIBUTING.md  CONTRIBUTING_ES.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml  docker.yml  release.yml  tests.yml
ES/: CHANGELOG_ES.md  CONTRIBUTING_ES.md  README_ES.md  SECURITY_AUDIT_ES.md
agents/: AGENTS.md  README.md
design/: phase4_authenticated_scanning.md
docs/: AUDIT_REPORT_v4.3.3.md  DIDACTIC_GUIDE.en.md  DIDACTIC_GUIDE.es.md  DIDACTIC_GUIDE.md  DOCKER.es.md  DOCKER.md  GUIA_DIDACTICA.md  INDEX.md  LAB_SETUP.md  LAB_SETUP_ES.md  MANUAL.en.md  MANUAL.es.md  MANUAL_EN.md  MANUAL_ES.md  REPORT_SCHEMA.en.md  REPORT_SCHEMA.es.md  REPORT_SCHEMA.md  REPORT_SCHEMA_ES.md  ROADMAP.en.md  ROADMAP.es.md  ROADMAP.md  ROADMAP_ES.md  SECURITY.en.md  SECURITY.es.md  SECURITY.md  SECURITY_ES.md  SIEM_INTEGRATION.en.md  SIEM_INTEGRATION.es.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.es.md  TROUBLESHOOTING.md  TROUBLESHOOTING_ES.md  USAGE.en.md  USAGE.es.md  USAGE.md  USAGE_ES.md
docs/design/: phase_transitions.md
docs/en/: DIDACTIC_GUIDE.md  MANUAL.md  REPORT_SCHEMA.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
docs/es/: DIDACTIC_GUIDE.md  MANUAL.md  REPORT_SCHEMA.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
docs/images/: architecture_modules.mmd
docs/releases/: DRAFT_TEMPLATE.md  RELEASE_NOTES_v2.5.md  RELEASE_NOTES_v2.6.1.md  RELEASE_NOTES_v2.8.md  RELEASE_NOTES_v2.9.0.md  RELEASE_NOTES_v3.0.1.md  RELEASE_NOTES_v3.0.2.md  RELEASE_NOTES_v3.0.3.md  RELEASE_NOTES_v3.0.4.md  RELEASE_NOTES_v3.1.1.md  RELEASE_NOTES_v3.1.1_ES.md  RELEASE_NOTES_v3.1.2.md  RELEASE_NOTES_v3.1.2_ES.md  RELEASE_NOTES_v3.1.3.md  RELEASE_NOTES_v3.1.3_ES.md  RELEASE_NOTES_v3.1.4.md  RELEASE_NOTES_v3.1.4_ES.md  RELEASE_NOTES_v3.1.md  RELEASE_NOTES_v3.10.0_ES.md  RELEASE_NOTES_v3.10.1.md  RELEASE_NOTES_v3.10.1_ES.md  RELEASE_NOTES_v3.10.2.md  RELEASE_NOTES_v3.10.2_ES.md  RELEASE_NOTES_v3.1_ES.md  RELEASE_NOTES_v3.2.0.md  RELEASE_NOTES_v3.2.0_ES.md  RELEASE_NOTES_v3.2.1.md  RELEASE_NOTES_v3.2.1_ES.md  RELEASE_NOTES_v3.2.2.md  RELEASE_NOTES_v3.2.2_ES.md  RELEASE_NOTES_v3.2.3.md  RELEASE_NOTES_v3.2.3_ES.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.3.0_ES.md  RELEASE_NOTES_v3.4.0.md  RELEASE_NOTES_v3.4.0_ES.md  RELEASE_NOTES_v3.4.1.md  RELEASE_NOTES_v3.4.1_ES.md  RELEASE_NOTES_v3.4.2.md  (+390 more)
redaudit/: VERSION  __init__.py  __main__.py  cli.py
scripts/: check_agent_pointers.sh  check_changed_coverage.py  check_scan_artifacts.py  ci_local.sh  consolidate_tests.py  redaudit-docker.ps1  redaudit-docker.sh  report_metrics.py  seed_keyring.py  setup_lab.sh  verify_fix_scanner.py
tests/: conftest.py  test_agentless_verify.py  test_audit_fixes.py  test_auditor_components.py  test_auditor_components_edge_cases.py  test_auditor_components_progress.py  test_auditor_components_security.py  test_auditor_configure_interactive.py  test_auditor_core.py  test_auditor_deep_scan.py  test_auditor_defaults.py  test_auditor_dry_run.py  test_auditor_edge_cases.py  test_auditor_mixins.py  test_auditor_mixins_progress.py  test_auditor_mixins_security.py  test_auditor_mixins_to_90.py  test_auditor_mixins_to_98.py  test_auditor_run_complete_scan.py  test_auditor_scan_coverage.py  test_auditor_scan_coverage_v2.py  test_auditor_scan_deep.py  test_auditor_scan_helpers.py  test_auditor_scan_host_ports.py  test_auditor_scan_network.py  test_auditor_scan_progress.py  test_auditor_scan_to_85.py  test_auditor_scan_to_90.py  test_auditor_subprocess.py  test_auditor_to_98.py  test_auditor_vuln_extra.py  test_batch_big_utilities.py  test_batch_network.py  test_batch_power_nvd.py  test_batch_to_80.py  test_cli.py  test_cli_interactive.py  test_command_runner.py  test_command_runner_coverage_push.py  test_config.py  (+106 more)
(+221 files in other folders)
