[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redaudit"
version = "4.18.8"
description = "CLI tool for structured network auditing and hardening on Kali/Debian systems"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Dorin Badea", email = "dorinidtech@gmail.com"}
]
keywords = [
    "security",
    "network-scanner",
    "pentesting",
    "audit",
    "nmap",
    "vulnerability-scanner"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "python-nmap>=0.7.1",
    "cryptography>=41.0.0",
    "netifaces>=0.11.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "keyring>=24.0.0",  # Secure credential storage via OS keychain
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]
auth = [
    "paramiko>=3.0.0",
    "impacket>=0.11.0",
    "pysnmp>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/dorinbadea/RedAudit"
Documentation = "https://github.com/dorinbadea/RedAudit/blob/main/docs/MANUAL.en.md"
Repository = "https://github.com/dorinbadea/RedAudit"
Issues = "https://github.com/dorinbadea/RedAudit/issues"
Changelog = "https://github.com/dorinbadea/RedAudit/blob/main/CHANGELOG.md"

[project.scripts]
redaudit = "redaudit.cli:main"

[tool.poetry]
name = "redaudit"
version = "4.18.8"
description = "CLI tool for structured network auditing and hardening on Kali/Debian systems"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Dorin Badea <dorinidtech@gmail.com>"]
packages = [{ include = "redaudit" }]

[tool.poetry.dependencies]
python = ">=3.9"
python-nmap = ">=0.7.1"
cryptography = ">=41.0.0"
netifaces = ">=0.11.0"
requests = ">=2.31.0"
jinja2 = ">=3.1.0"
rich = ">=13.0.0"
keyring = ">=24.0.0"
paramiko = { version = ">=3.0.0", optional = true }
impacket = { version = ">=0.11.0", optional = true }
pysnmp = { version = ">=6.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
coverage = ">=7.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
pre-commit = ">=3.0.0"

[tool.poetry.extras]
auth = ["paramiko", "impacket", "pysnmp"]

[tool.setuptools]
packages = ["redaudit", "redaudit.core", "redaudit.utils", "redaudit.templates"]

[tool.setuptools.package-data]
"redaudit" = ["templates/*.j2"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.coverage.run]
source = ["redaudit"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
# Skip intentional patterns in security scanning tool:
# B101: assert used in tests
# B103: permissive file permissions (needed for install scripts)
# B110/B112: try-except-pass/continue (graceful degradation)
# B310: urlopen (we validate URLs)
# B311: random (used for jitter, not crypto)
# B324: MD5 (used for cache keys, not security)
# B404: import subprocess (core tool functionality)
# B603: subprocess without shell (secure pattern)
# B605/B606/B607: process execution (core functionality)
skips = ["B101", "B103", "B110", "B112", "B310", "B311", "B324", "B404", "B603", "B605", "B606", "B607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: real tool output checks (opt-in)"
]
